--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,35 @@
+# pyproject.toml
 [build-system]
-requires = ["setuptools>=45", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "chatcoder"
 version = "0.1.0"
-description = "AI-Native Development Assistant"
+description = "A CLI tool for structured AI-assisted software development using prompt templates."
 readme = "README.md"
+authors = [{ name = "Your Name", email = "your.email@example.com" }]
+license = { text = "MIT" }
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+]
 requires-python = ">=3.8"
 dependencies = [
-    "click",
-    "jinja2",
-    "rich"
+    "click>=8.0.0",
+    "jinja2>=3.0.0",
+    "rich>=12.0.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-mock",
+    "flake8",
+    "black",
+    "isort",
 ]
 
 [project.scripts]
